Closed Bug 220519 Opened 22 years ago Closed 22 years ago

[FIX]Imagemaps are broken in 27th nightly builds - latest CVS pulls.

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.6alpha

People

(Reporter: stephend, Assigned: bzbarsky)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030924 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030924 With my latest CVS pull as of 9/27/2003 on Windows 2000: The imagemaps on http://www.netflix.com don't accept clicks (though they show the 'hand' pointer as if it were indeed a link). Reproducible: Always Steps to Reproduce: 1. Load http://www.netflix.com 2. Attempt to click on tabs. Actual Results: We get a hover state (as if we've indeed found an <a href> or similar node element, but clicking doesn't do anything. Expected Results: Gone to the respective link: http://www.netflix.com/RecommendationsHome http://www.netflix.com/Queue Code snippet inline: <map name="member-nav"> <area alt="Browse Movies" coords="7,2,91,27" > <area alt="Recommendations Based on Your Ratings" coords="100,2,267,27" href="http://www.netflix.com/RecommendationsHome"> <area alt="Your Rental Queue" coords="274,2,350,27" href="http://www.netflix.com/Queue"> </map> <table border=0 cellpadding=0 cellspacing=0 border=0 class=headertbl background="http://a408.g.akamai.net/f/408/1284/24h/image.netflix.com/NetFlix_Assets/layout/headers/member_bg_browse.gif"> <tr> <td valign=top height=57 width=35%><a href="http://www.netflix.com/Default"><img src="http://a408.g.akamai.net/f/408/1284/24h/image.netflix.com/NetFlix_Assets/layout/headers/logo.gif" width="89" height="28 alt="Netflix border="0" class="logo"></a></td> <td valign=bottom align=center><img src="http://a408.g.akamai.net/f/408/1284/24h/image.netflix.com/NetFlix_Assets/layout/headers/member_browse_tab.gif" width="361" height="46" border="0" usemap="#member-nav"></td> <td valign=top align=right width=35%><div class="links"><a href="http://www.netflix.com/YourAccount">Your Account</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.netflix.com/Help">Help</a></div></td> </tr> </table>
Jst, sorry, but is this yours? ;(
FWIW also, if you 'Open link in new window' or 'Open link in new tab' on those Tabs, it works fine.
On Windows XP with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20030916, that image map works for me.
*** Bug 220513 has been marked as a duplicate of this bug. ***
This is a regression from jst's checkin. The problem is the following change to nsGenericHTMLElement::HandleDOMEventForAnchors: old code: nsCOMPtr<nsIAtom> tag; GetTag(getter_AddRefs(tag)); if (tag && tag.get() != nsHTMLAtoms::area) return ret; New code: if (IsArea(this)) { return ret; So the problem is that the sense of the check got reversed. Taking bug.
Assignee: other → bzbarsky
OS: Windows 2000 → All
Priority: -- → P1
Hardware: PC → All
Summary: Imagemaps are broken in 27th nightly builds - latest CVS pulls. → [FIX]Imagemaps are broken in 27th nightly builds - latest CVS pulls.
Target Milestone: --- → mozilla1.6alpha
Attached patch PatchSplinter Review
Fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Keywords: regression
*** Bug 220648 has been marked as a duplicate of this bug. ***
*** Bug 220859 has been marked as a duplicate of this bug. ***
Verified FIXED using 2004-07-13-08 on Windows XP.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: