Make imagemaps work again.  Bug 220519, r+sr=dbaron